--- a/Frontend/Watches/index.html
+++ b/Frontend/Watches/index.html
@@ -14,15 +14,31 @@
 
 <body>
     <header>
-        <h1>mor705</h1>
-        <p>Watch</p>
-        <p>
-            The watch also features a tough and durable sapphire a Swiss Sellita SW200-1 automatic winding movement that
-            has a power reserve
-        </p>
-        <img src="images/mor705.png" alt="Mor705" srcset="images/mor705.png, images/mor705@2x.png 2x">
-        <a href="">Buy watch</a>
-        <p>1700$</p>
+        <div class="header-wrapper">
+            <div class="header-discription-wrapper">
+                <div>
+                    <h1 class="header-model-wrapper">mor705</h1>
+                </div>
+                <div class="header-product-wrapper">
+                    <p>Watch</p>
+                </div>
+                <div class="discription-wrapper">
+                    <p>
+                        The watch also features a tough and durable sapphire a Swiss Sellita SW200-1 automatic winding
+                        movement
+                        that
+                        has a power reserve
+                    </p>
+                </div>
+                <div class="buy-wrapper">
+                    <a class="buy" href="">Buy watch</a>
+                    <p class="price">1700$</p>
+                </div>
+            </div>
+            <div class="img-wrapper">
+                <img src="images/mor705.png" alt="Mor705" srcset="images/mor705.png, images/mor705@2x.png 2x">
+            </div>
+        </div>
     </header>
     <main>
         <p>popular</p>
