--- a/Frontend/Watches/index.html
+++ b/Frontend/Watches/index.html
@@ -41,21 +41,48 @@
         </div>
     </header>
     <main>
-        <p>popular</p>
-        <h2>Models</h2>
-        <img src="images/son22.png" alt="son22" srcset="images/son22.png, images/son22@2x.png 2x">
-        <h2>Son22</h2>
-        <p>The watch also features a tough and durable sapphire crystal glass and comes with a Swiss SW200-1 automatic
-            winding movement that has a power reserve.</p>
-        <img src="images/sw12.png" alt="Sw12" srcset="images/sw12.png, images/sw12@2x.png 2x">
-        <h2>Sw12</h2>
-        <p>The watch also features a tough and durable sapphire crystal glass and comes with a Sw12-1 automatic winding
-        </p>
-        <h2>Product description</h2>
-        <P>Inspired by the WWI trench watch, this timepiece has a contemporary design with an urban style and a vintage
-            soul. The 22 Design Studio Concrete Sector Watch reinterprets the old timepiece with a concrete dial.
-            Handmade in Taiwan, the dial is cast in one piece using the béton technique <a href="">more detailed</a>
-        </P>
+        <p class="item-popular">popular</p>
+        <p class="item-models">Models</p>
+        <div class="item-product-wrapper">
+            <div class="item-img-wrapper">
+                <img class="item-img-product" src="images/son22.png" alt="son22"
+                    srcset="images/son22.png, images/son22@2x.png 2x">
+            </div>
+        </div>
+        <h2 class="item-title">Son22</h2>
+        <div class="item-discription-wrapper">
+            <p class="item-discription">The watch also features a tough and durable sapphire crystal glass and comes
+                with a
+                Swiss SW200-1
+                automatic
+                winding movement that has a power reserve.</p>
+        </div>
+        <div>
+            <div class="item-product-wrapper">
+                <img class="item-img-product" src="images/sw12.png" alt="Sw12"
+                    srcset="images/sw12.png, images/sw12@2x.png 2x">
+            </div>
+            <h2 class="item-title">Sw12</h2>
+            <div class="item-discription-wrapper">
+                <p class="item-discription">The watch also features a tough and durable sapphire crystal glass and comes
+                    with a Sw12-1 automatic
+                    winding
+                </p>
+            </div>
+        </div>
+
+        <h2 class="title-description">Product description</h2>
+        <div class="product-discription-wrapper">
+            <P class="product-discription">Inspired by the WWI trench watch, this timepiece has a contemporary design
+                with
+                an urban style and a
+                vintage
+                soul. The 22 Design Studio Concrete Sector Watch reinterprets the old timepiece with a concrete dial.
+                Handmade in Taiwan, the dial is cast in one piece using the béton technique <a class="link" href="">more
+                    detailed</a>
+            </P>
+        </div>
+
     </main>
 
 </body>
