delet position error

--- a/Frontend/Watches/index.html
+++ b/Frontend/Watches/index.html
@@ -57,18 +57,19 @@
                 automatic
                 winding movement that has a power reserve.</p>
         </div>
-        <div>
-            <div class="item-product-wrapper">
+        <div class="item-product-wrapper">
+            <div class="item-img-wrapper">
                 <img class="item-img-product" src="images/sw12.png" alt="Sw12"
                     srcset="images/sw12.png, images/sw12@2x.png 2x">
             </div>
-            <h2 class="item-title">Sw12</h2>
-            <div class="item-discription-wrapper">
-                <p class="item-discription">The watch also features a tough and durable sapphire crystal glass and comes
-                    with a Sw12-1 automatic
-                    winding
-                </p>
-            </div>
+        </div>
+        <h2 class="item-title">Sw12</h2>
+        <div class="item-discription-wrapper">
+            <p class="item-discription">The watch also features a tough and durable sapphire crystal glass and comes
+                with a Sw12-1 automatic
+                winding
+            </p>
+        </div>
         </div>
 
         <h2 class="title-description">Product description</h2>
