--- a/Frontend/Watches/index.html
+++ b/Frontend/Watches/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -59,7 +60,7 @@
         </div>
         <div class="item-product-wrapper">
             <div class="item-img-wrapper">
-                <img class="item-img-product" src="images/sw12.png" alt="Sw12"
+                <img class="item-img-product-sw12" src="images/sw12.png" alt="Sw12"
                     srcset="images/sw12.png, images/sw12@2x.png 2x">
             </div>
         </div>
@@ -71,7 +72,6 @@
             </p>
         </div>
         </div>
-
         <h2 class="title-description">Product description</h2>
         <div class="product-discription-wrapper">
             <P class="product-discription">Inspired by the WWI trench watch, this timepiece has a contemporary design
